added plots avg prec

--- a/report.ipynb
+++ b/report.ipynb
@@ -112,22 +112,22 @@
    "source": [
     "text_clfMNB = Pipeline([ ('vect', CountVectorizer()),\n",
     "                      ('tfidf', TfidfTransformer()),\n",
-    "                      ('clf', MultinomialNB(random_state=42)),\n",
+    "                      ('clf', MultinomialNB()),\n",
     "])\n",
     "\n",
     "text_clfLR = Pipeline([ ('vect', CountVectorizer()),\n",
     "                      ('tfidf', TfidfTransformer()),\n",
-    "                      ('clf', LogisticRegression(random_state=42))\n",
+    "                      ('clf', LogisticRegression())\n",
     "])\n",
     "\n",
     "text_clfCT = Pipeline([ ('vect', CountVectorizer()),\n",
     "                      ('tfidf', TfidfTransformer()),\n",
-    "                      ('clf', tree.DecisionTreeClassifier(random_state=42))\n",
+    "                     # ('clf', tree.DecisionTreeClassifier())\n",
     "])\n",
     "\n",
-    "text_clfRF = Pipeline([ ('vect', CountVectorizer()),\n",
-    "                      ('tfidf', TfidfTransformer()),\n",
-    "                      ('clf', ExtraTreesClassifier(random_state=42))\n",
+    "text_clfRF = Pipeline([ ('vect', CountVectorizer(max_features = 'sqrt')),\n",
+    "                      ('tfidf', TfidfTransformer(max_features = 'sqrt')),\n",
+    "                      ('clf', ExtraTreesClassifier(max_features = 'sqrt'))\n",
     "])"
    ]
   },
@@ -173,7 +173,7 @@
     "parameters_DT = {\n",
     "               'vect__ngram_range': [arr],\n",
     "               'tfidf__use_idf': (True, False),\n",
-    "               'clf__max_depth': [1,2,3,4,5,6,7,999999]\n",
+    "               'clf__max_depth': [999999]\n",
     "}\n",
     "\n",
     "parameters_LR = {\n",
@@ -185,8 +185,7 @@
     "parameters_RF = {\n",
     "               'vect__ngram_range': [arr],\n",
     "               'tfidf__use_idf': (True, False),\n",
-    "               'clf__n_estimators' : [100, 200, 300],\n",
-    "               'clf__max_depth' : [1,2,3,4,5,6,7,999999]\n",
+    "               'clf__n_estimators' : [100, 200, 300]\n",
     "}"
    ]
   },
@@ -250,7 +249,44 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def bar(popularity_data,plot_name):\n",
+    "  plt.figure(figsize=(15,12))\n",
+    "  # sort in-place from highest to lowest\n",
+    "  popularity_data.sort(key=lambda x: x[1], reverse=True) \n",
+    "\n",
+    "  # save the names and their respective scores separately\n",
+    "  # reverse the tuples to go from most frequent to least frequent \n",
+    "  data,score = zip(*popularity_data)\n",
+    "  x_pos = np.arange(len(data))\n",
+    "  \n",
+    "  #space bars apart\n",
+    "  for j in range(len(x_pos)):\n",
+    "    x_pos[j]=x_pos[j]+j\n",
+    "    \n",
+    "  plt.bar(x_pos, score,align='center')\n",
+    "  #plt.tick_params(axis='x', which='major', pad=15)\n",
+    "    \n",
+    "  plt.xticks(x_pos, data) \n",
+    "\n",
+    "  plt.ylabel(plot_name)\n",
+    "  \n",
+    "  plt.show()\n",
+    "\n",
+    "print('-----PLOTING----------')\n",
+    "t = ['|Naive Bayes|',\n",
+    "     '|Logistic regression|',\n",
+    "    '|Class. Tree|',\n",
+    "    '|Rand. Forest|',\n",
+    "]\n",
+    "data = [0.89,0.86,0.63,0.82]\n",
+    "bar(list(zip(t,data)),'Average precision unigrams')\n",
+    "\n",
+    "data = [0.79,0.62,0.84,0.81]\n",
+    "bar(list(zip(t,data)),'Average precision bigrams')\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -268,21 +304,21 @@
    "version": "0.3.2"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
